--- a/.github/workflows/dimensions.yml
+++ b/.github/workflows/dimensions.yml
@@ -1,37 +1,38 @@
-name: Build Dimensions
+name: Publish Docker image   # workflow名称，可以在Github项目主页的【Actions】中看到所有的workflow
 
-on:
+on:   # 配置触发workflow的事件
   push:
-    tags:
-      - dimensions-*
+    branches:   # master分支有push时触发此workflow
+      - 'master'
+    tags:       # tag更新时触发此workflow
+      - '*'
 
-jobs:
-  build-dimensions:
-    name: build dimensions
-    runs-on: ubuntu-latest
-    container: node:12.16-alpine
+jobs:  # workflow中的job
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+  push_to_registry:  # job的名字
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest   # job运行的基础环境
+
+    steps:  # 一个job由一个或多个step组成
+      - name: Check out the repo
+        uses: actions/checkout@v2   # 官方的action，获取代码
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1  # 三方的action操作， 执行docker login
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}  # 配置dockerhub的认证，在Github项目主页 【Settings】 -> 【Secrets】 添加对应变量
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Get Version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
-      - name: Build and push
-        uses: docker/build-push-action@v2
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3  # 抽取项目信息，主要是镜像的tag
         with:
-          file: dockerfile
-          platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le
+          images: hyf3513/dimensions
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2 # docker build & push
+        with:
+          context: .
           push: true
-          tags: |
-            hyf3513/dimensions:latest
-            hyf3513/dimensions:${{ steps.get_version.outputs.VERSION }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
